# parsing

./: .gitignore  .gitignore.orig  Cargo.toml  README.md  Thesis.py  check.py  download_data.py  get_all_python_files.py  lexrank.py  lexrank_utils.py  plan.md  preprocess.py  preprocess_cnn_dm.py  requirements.txt  rouge_scores.py  run.sh  unzip.sh  worker.sh
baseline/: random_1.py  random_3.py  random_n.py  random_n.py.orig
best/: test_trained.py  train.py
best2/: test_untrained.py  train.py  train_new.py
data_figures/: data_figs.py  lobf_fig.py  more_data_figs.py
figures/: data_figs.py
getters/: processor.sh  run.sh
lead_n/: extra.py  lead_13.py  lead_n.py  onepluslead_n.py  opl_tail.py  table_5_summary_generation.py  tail_n.py
lexrank/: calculate.py  centrality.pkl  check.py  lexrank.py  lexrank_utils.py  produce_figure.py
lexrank/rouge_results/: calculate.py
model/: events.out.tfevents.1601335147.yup  events.out.tfevents.1601335235.yup  events.out.tfevents.1601336879.yup  events.out.tfevents.1601337016.yup  events.out.tfevents.1601337100.yup  events.out.tfevents.1601337331.yup  events.out.tfevents.1601337735.yup  events.out.tfevents.1601337895.yup  events.out.tfevents.1601338279.yup  events.out.tfevents.1601338760.yup  events.out.tfevents.1601338890.yup
notes/: presumm.md
pdf/: main.aux  main.out  main.tex
preprocessing/: create_train_test.py  preprocess.py  preprocess_cnn_dm.py
results/: random_sampling.py
src/: main.rs  unzip.sh
sts/: test_baseline.py  train.py
t5/: rouge_calcs.py  test_trained.py  test_untrained.py  train.py
(+2 files in other folders)
