[package]
name = "parsing"
version = "0.1.0"
authors = ["Aman Berry <aman.berry725@gmai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.57"

